k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-disease
  labels:
    name: heart-disease
    environment: production
